--- a/package.json
+++ b/package.json
@@ -18,12 +18,19 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "babel src --out-dir lib --source-maps",
+    "watch": "babel src --out-dir lib --watch --source-maps",
+    "prepublish": "npm run --if-present build",
+    "test": "mocha"
   },
   "keywords": [
     "textlint"
   ],
   "devDependencies": {
+    "babel": "^5.8.23",
+    "espower-babel": "^3.3.0",
+    "mocha": "^2.3.2",
+    "power-assert": "^1.0.0",
     "textlint": "^3.3.2"
   }
 }
