fix(rule): fix default options

--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "mocha": "^2.3.2",
     "power-assert": "^1.0.0",
     "textlint": "^3.3.2"
+  },
+  "dependencies": {
+    "object-assign": "^4.0.1"
   }
 }
