--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "textlint": "^3.3.2"
   },
   "dependencies": {
-    "object-assign": "^4.0.1"
+    "object-assign": "^4.0.1",
+    "textlint-rule-helper": "^1.1.3"
   }
 }
