--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test": "test"
   },
   "scripts": {
-    "build": "babel src --out-dir lib --source-maps",
+    "build": "NODE_ENV=production babel src --out-dir lib --source-maps",
     "watch": "babel src --out-dir lib --watch --source-maps",
     "prepublish": "npm run --if-present build",
     "test": "mocha"
@@ -31,14 +31,18 @@
     "textlint"
   ],
   "devDependencies": {
-    "babel": "^5.8.23",
-    "espower-babel": "^3.3.0",
+    "babel-cli": "^6.10.1",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-jsdoc-to-assert": "^2.0.1",
+    "babel-preset-power-assert": "^1.0.0",
+    "babel-register": "^6.9.0",
     "mocha": "^2.3.2",
-    "power-assert": "^1.0.0",
-    "textlint": "^3.3.2"
+    "power-assert": "^1.4.1",
+    "textlint": "^6.11.1",
+    "textlint-tester": "^1.2.0"
   },
   "dependencies": {
     "object-assign": "^4.0.1",
-    "textlint-rule-helper": "^1.1.3"
+    "textlint-rule-helper": "^2.0.0"
   }
 }
