--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "object-assign": "^4.0.1",
+    "sentence-splitter": "^2.0.0",
     "textlint-rule-helper": "^2.0.0"
   }
 }
